gl33-master/src/test/deca/syntax/invalid/others/protectedFausse.deca
/*
Test sur le syntaxe de protected

Attention : si le fichier est modifié, il faut le vérifier à nouveau et
copier la sortie dans src/test/deca/invalid/others/expected

*/

class MyClass{
  pritected boolean a = true;
}

{
  MyClass m = new MyClass();
}
